--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -2,12 +2,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  color: inherit;
-  list-style: none;
-  text-decoration: none;
   border: none;
   outline: none;
 }
@@ -60,6 +54,7 @@ p {
 
 a {
   cursor: pointer;
+  color: $main-font-clr;
 }
 
 svg {
