--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -1,6 +1,12 @@
 .app-footer {
   background-color: $main-bg-clr;
   color: $sec-font-clr;
-  display: block;
-  // max-height: rem(100px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: max-content;
+  max-height: 72px;
+  min-width: 100vw;
+  width: 100%;
+  margin: em(10px);
 }
