--- a/src/assets/styles/cmps/SearchResults.scss
+++ b/src/assets/styles/cmps/SearchResults.scss
@@ -1,38 +1,3 @@
-// (
-// <section className="search-results">
-// <div className="top-song-result">
-//   <h1>Top result</h1>
-//   <div className="top-song-details">
-//     {songResults && songResults.length > 0 && (
-//       <>
-//         <div className="song-img">
-//           <img src={songResults[0].img} alt="song-thumbnail" />
-//         </div>
-//         <div className="song-info">
-//           <p>{songResults[0].name}</p>
-//           <small>{songResults[0].artist}</small>
-//         </div>
-//         <button
-//           onClick={() => onPlaySong(songResults[0])}
-//           className="play-btn"
-//         >
-//           <ReactSVG
-//             src={
-//               isPlaying && currentSong.id === songResults[0].id
-//                 ? pauseIcon
-//                 : playIcon
-//             }
-//           />
-//         </button>
-//       </>
-//     )}
-//   </div>
-// </div>
-// <SongResults songResults={songResults} />
-// <StationResults stationResults={stationResults} />
-// </section>
-// );
-
 //for mobile layout
 .search-results {
   display: flex;
@@ -44,7 +9,7 @@
 @include for-normal-layout {
   .search-results {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
     grid-template-rows: auto auto 1fr;
     gap: em(10px);
     //set to start from top of the cell
@@ -63,7 +28,7 @@
       flex-direction: column;
       justify-content: space-between;
       container-type: inline-size;
-      margin: 0;
+      padding: 20px;
       //strech the element to the full width and height of the parent
       width: 100%;
       height: 100%;
@@ -89,10 +54,11 @@
 
         .song-img {
           position: relative;
-          width: em(100px);
-          height: em(100px);
+          width: em(85px);
+          height: em(85px);
           border-radius: em(8px);
           overflow: hidden;
+          box-shadow: 0 8px 8px rgba(0, 0, 0, 0.01);
           img {
             width: 100%;
             height: 100%;
@@ -107,7 +73,7 @@
 
           p {
             margin: 0;
-            font-size: 2rem;
+            font-size: 1.8rem;
             font-weight: 700;
             white-space: nowrap; /* Ensure the text stays on one line */
             overflow: hidden; /* Hide the overflow text */
@@ -118,7 +84,10 @@
           }
 
           small {
-            font-size: em(14px);
+            font-size: em(12px);
+            white-space: nowrap; /* Ensure the text stays on one line */
+            overflow: hidden; /* Hide the overflow text */
+            text-overflow: ellipsis; /* Display an ellipsis for overflow text */
             .type {
               color: $sec-font-clr;
               font-weight: 400;
@@ -147,11 +116,18 @@
         background-color: $logo-clr; /* Use the logo color for the play button */
         border: none;
         border-radius: 50%; /* Make the play button circular */
-        width: em(60px);
-        height: em(60px);
+        width: em(40px);
+        height: em(40px);
+        box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+        * {
+          margin: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
         svg {
-          width: em(24px);
-          height: em(24px);
+          width: rem(20px);
+          height: rem(20px);
         }
       }
     }
