--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -18,20 +18,26 @@
     padding-left: rem(5px);
     background-color: $sec-bg-clr;
     border-radius: rem(5px);
+    padding: 0 em(15px) em(15px) em(15px);
   }
 
   .app-footer {
     position: sticky;
-    bottom: 0; /* Stick to the bottom of the viewport */
-    z-index: 1; /* Ensure footer stays above other content */
+    bottom: 0;
+    /* Stick to the bottom of the viewport */
+    z-index: 1;
+    /* Ensure footer stays above other content */
     grid-row: 2;
   }
+
   .nav-bar {
     grid-row: 3;
     grid-column: 1;
 
-    z-index: 1; /* Ensure nav-bar stays above other content */
+    z-index: 1;
+    /* Ensure nav-bar stays above other content */
   }
+
   .side-pop-up {
     display: none;
   }
@@ -39,19 +45,24 @@
   @include for-normal-layout {
     grid-template-columns: auto 1fr;
     grid-template-rows: 1fr auto;
+
     .app-footer {
       grid-row: 2;
       grid-column: 1 / -1;
     }
+
     .nav-bar {
       grid-row: 1;
       grid-column: 1;
       resize: horizontal;
       overflow-y: auto;
       position: sticky;
-      top: 0; /* Stick to the top of the viewport */
-      left: 0; /* Stick to the left of the viewport */
+      top: 0;
+      /* Stick to the top of the viewport */
+      left: 0;
+      /* Stick to the left of the viewport */
     }
+
     .main-container {
       grid-row: 1;
       grid-column: 2;
