--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -6,6 +6,7 @@ $main-font-clr: #ffffff;
 $sec-font-clr: #a7a7a7;
 $secondary-main-clr: #282828;
 $search-bar-clr: #252525;
+$input-bg-clr: #242424;
 
 $station-img-border-radius: 20%;
 
