--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -7,6 +7,8 @@ $sec-font-clr: #a7a7a7;
 $secondary-main-clr: #282828;
 $search-bar-clr: #252525;
 $input-bg-clr: #242424;
+$input-hover-bg-clr: #2d2d2d;
+$input-hover-border-clr: #4f4f4f;
 
 $station-img-border-radius: 20%;
 
