--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -48,6 +48,11 @@
       border-color: $input-hover-border-clr;
     }
 
+    &:target {
+      border: em(3px) solid;
+      border-color: $input-hover-border-clr;
+    }
+
     // this effects the div inside the svg div
     div {
       display: flex;
