Style home page catalog - lists of playlists

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -43,6 +43,7 @@
 @import "cmps/PlayerActions";
 @import "cmps/NavBar";
 @import "cmps/NavOptions";
+@import "cmps/StationPreview";
 @import "cmps/StationList";
 @import "cmps/Library";
 @import "cmps/ImgUploader";
