--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -35,6 +35,7 @@ h6 {
 
 ul {
   margin: 0;
+  list-style-type: none;
 }
 
 section,
@@ -49,12 +50,14 @@ img {
 }
 
 p {
-  margin: 0; /* margin: 0 0 1em; */
+  margin: 0;
+  /* margin: 0 0 1em; */
 }
 
 a {
   cursor: pointer;
   color: $main-font-clr;
+  text-decoration: none;
 }
 
 svg {
@@ -67,6 +70,7 @@ svg {
   font-size: 1.17em;
   margin: 0;
 }
+
 input {
   //text input color black
   color: black;
