--- a/src/assets/styles/cmps/Catalog.scss
+++ b/src/assets/styles/cmps/Catalog.scss
@@ -15,7 +15,7 @@
 
     .station-list {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         flex-wrap: wrap;
         gap: em(20px);
     }
