--- a/src/assets/styles/cmps/PlayerActions.scss
+++ b/src/assets/styles/cmps/PlayerActions.scss
@@ -1,38 +1,14 @@
 .player-actions {
-  margin: em(35px);
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  gap: em(15px);
+
   svg {
     fill: $sec-font-clr;
     height: em(16px);
     width: em(16px);
     cursor: pointer;
-  }
-
-  .volume-bar {
-    width: em(100px);
-    .volume-bar-track {
-      color: #fff;
-    }
-
-    .volume-bar-rail {
-      color: $sec-font-clr;
-    }
-    .volume-bar-thumb {
-      background-color: #fff;
-      border-radius: 50%;
-      width: 0px;
-      height: 0px;
-      &:hover {
-        box-shadow: 0 0 0 0;
-      }
-    }
-    &:hover {
-      .volume-bar-thumb {
-        width: rem(15px);
-        height: rem(15px);
-      }
-      .volume-bar-track {
-        color: $logo-clr;
-      }
-    }
   }
 }
