--- a/src/assets/styles/cmps/GenreList.scss
+++ b/src/assets/styles/cmps/GenreList.scss
@@ -1,6 +1,7 @@
 .genre-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-auto-rows: repeat(auto-fill, minmax(200px, 1fr));
+  justify-content: center;
+  gap: 1em;
 }
