--- a/src/assets/styles/cmps/Player.scss
+++ b/src/assets/styles/cmps/Player.scss
@@ -65,6 +65,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 40vw;
+    width: 100%;
+    height: 100%;
+    align-self: center;
+    justify-self: center;
+    font-size: 0.95em;
+    &:hover {
+      .time-bar-track {
+        color: $logo-clr; /* Change the color of the track on hover */
+      }
+      .time-bar-thumb {
+        width: rem(15px); /* Set the width of the thumb on hover */
+        height: rem(15px); /* Set the height of the thumb on hover */
+      }
+    }
 
     .current-time {
       font-size: 0.75em;
