--- a/src/assets/styles/cmps/StationResults.scss
+++ b/src/assets/styles/cmps/StationResults.scss
@@ -1,35 +1,47 @@
 .station-results {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
+  flex-direction: column;
   margin-top: 20px;
   margin-bottom: 20px;
 
+  .station-results-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
   .station-preview {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 10px;
-    width: 200px;
-    height: 200px;
-    background-color: #242424;
-    color: white;
-    text-align: center;
-    cursor: pointer;
-    transition: 0.3s;
-    &:hover {
-      background-color: #333333;
-    }
-    img {
-      width: 100%;
-      height: 100%;
-      width: 50px;
-      height: 50px;
-      border-radius: 5px;
+    justify-content: center;
+    gap: 10px;
+    .info-container {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      justify-content: end;
+      align-self: center;
+      .station-img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        overflow: hidden;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .station-name {
+        font-size: 1.5em;
+        font-weight: 700;
+        color: #fff;
+      }
+      .station-description {
+        font-size: 1em;
+        font-weight: 400;
+        color: #fff;
+      }
     }
   }
 }
