start style the station page

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -13,12 +13,12 @@
   .main-container {
     overflow-y: scroll;
     margin-right: rem(5px);
-    padding-bottom: rem(5px);
-    padding-right: rem(5px);
-    padding-left: rem(5px);
+    // padding-bottom: rem(5px);
+    // padding-right: rem(5px);
+    // padding-left: rem(5px);
     background-color: $sec-bg-clr;
     border-radius: rem(5px);
-    padding: 0 em(15px) em(15px) em(15px);
+    // padding: 0 em(15px) em(15px) em(15px);
   }
 
   .app-footer {
