--- a/src/assets/styles/views/StationPage.scss
+++ b/src/assets/styles/views/StationPage.scss
@@ -1,3 +1,7 @@
+.station-page-container {
+  height: 300px; /* Adjust height as per your design */
+}
+
 .station-page {
   display: flex;
   flex-direction: column;
