--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -67,5 +67,10 @@
       grid-row: 1;
       grid-column: 2;
     }
+
+    // .mini-preview {
+    //   flex-basis: 24%;
+    //   background-color: red;
+    // }
   }
 }
