--- a/src/assets/styles/cmps/StationResults.scss
+++ b/src/assets/styles/cmps/StationResults.scss
@@ -1,46 +1,78 @@
 .station-results {
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
-  margin-bottom: 20px;
-
-  .station-results-list {
+  max-height: 300px;
+  overflow: hidden;
+  .station-results-container {
+    padding: 20px;
     display: flex;
+    gap: 20px;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-  }
-  .station-preview {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    .info-container {
+
+    .station-card {
+      flex: auto;
       display: flex;
       flex-direction: column;
-      align-items: start;
-      justify-content: end;
-      align-self: center;
+      justify-content: center;
+      position: relative;
       .station-img {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
+        position: relative;
+        width: 16dvh;
+        height: 16dvh;
         overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
+          border-radius: 10%;
+          box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+        }
+
+        .play-btn {
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          width: 0;
+          height: 0;
+          opacity: 0;
+          bottom: em(8px);
+          background-color: $logo-clr;
+          border: none;
+          border-radius: 500px;
         }
       }
-      .station-name {
-        font-size: 1.5em;
-        font-weight: 700;
-        color: #fff;
-      }
-      .station-description {
-        font-size: 1em;
-        font-weight: 400;
-        color: #fff;
+
+      border-radius: em(8px);
+      padding: em(10px);
+      &:hover {
+        background-color: #242424;
+
+        .play-btn {
+          width: em(40px);
+          height: em(40px);
+          opacity: 1;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          * {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            * {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+          }
+          svg {
+            width: 20px;
+            height: 20px;
+          }
+        }
       }
     }
   }
