--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -2,13 +2,11 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr auto auto;
-  width: 100vw;
-  height: 100vh;
-  max-width: 100vw;
+  width: 90%;
+  height: 100%;
   max-height: 100vh;
-  overflow: hidden;
   padding-top: rem(5px);
-  position: relative;
+  border-radius: rem(5px);
 
   .main-container {
     overflow-y: scroll;
@@ -16,8 +14,10 @@
     // padding-bottom: rem(5px);
     // padding-right: rem(5px);
     // padding-left: rem(5px);
-    background-color: $sec-bg-clr;
     border-radius: rem(5px);
+    position: sticky;
+
+    background-color: $sec-bg-clr;
     // padding: 0 em(15px) em(15px) em(15px);
   }
 
@@ -25,7 +25,6 @@
     position: sticky;
     bottom: 0;
     /* Stick to the bottom of the viewport */
-    z-index: 1;
     /* Ensure footer stays above other content */
     grid-row: 2;
   }
@@ -34,7 +33,6 @@
     grid-row: 3;
     grid-column: 1;
 
-    z-index: 1;
     /* Ensure nav-bar stays above other content */
   }
 
@@ -56,7 +54,7 @@
       grid-column: 1;
       resize: horizontal;
       overflow-y: auto;
-      position: sticky;
+      position: initial;
       top: 0;
       /* Stick to the top of the viewport */
       left: 0;
@@ -67,6 +65,5 @@
       grid-row: 1;
       grid-column: 2;
     }
-
   }
 }
