--- a/src/assets/styles/cmps/StationHeader.scss
+++ b/src/assets/styles/cmps/StationHeader.scss
@@ -1,51 +1,38 @@
-.station-header {
+@include for-normal-layout {
+  // Additional styles for the normal layout if needed
+  .station-header {
+    .station-header-grid {
+      display: grid;
+      grid-template-columns: 1fr 5fr;
+      grid-template-rows: 1fr;
+      gap: 1em;
+      padding: 1em;
+      border-radius: 5px;
+      color: white;
+      font-size: 1.5em;
+      font-weight: bold;
+      align-items: center;
+      justify-content: space-between;
 
-    .station-preview {
+      .station-header-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10%;
+        box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+      }
 
+      .station-header-info {
         display: flex;
         flex-direction: column;
-
-        img {
-            width: 20vw;
-            height: 20vw;
-            align-self: center;
-        }
-    }
-}
-
-@include for-normal-layout {
-
-    .station-header {
-        display: flex;
+        gap: 1em;
         align-items: center;
-
-        padding: em(20px);
-
-        .station-preview {
-
-            display: flex;
-            flex-direction: row;
-            justify-content: left;
-            column-gap: em(20px);
-            align-items: center;
-            align-content: center;
-
-            img {
-                width: em(200px);
-                height: em(200px);
-                border-radius: 4px;
-            }
-
-            .info-container {
-                display: flex;
-                flex-direction: column;
-                row-gap: em(20px);
-                align-self: stretch;
-                justify-content: flex-end;
-
-                .station-creator {}
-            }
+        justify-content: center;
+        .station-type {
+          font-size: 0.5em;
+          font-weight: normal;
         }
+      }
     }
-
+  }
 }
