--- a/src/assets/styles/cmps/StationHeader.scss
+++ b/src/assets/styles/cmps/StationHeader.scss
@@ -6,7 +6,6 @@
       grid-template-columns: 1fr 5fr;
       grid-template-rows: 1fr;
       gap: 1em;
-      padding: 1em;
       border-radius: 5px;
       color: white;
       font-size: 1.5em;
@@ -15,11 +14,17 @@
       justify-content: space-between;
 
       .station-header-img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 10%;
-        box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+        width: em(150px);
+        height: em(150px);
+        box-shadow: 0 0 100px 20px rgba(0, 0, 0, 0.4);
+        border-radius: 2.5%;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
 
       .station-header-info {
