add  edit station modal style -not finished

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -57,4 +57,5 @@
 @import "cmps/ArtistResults";
 @import "cmps/MinimalSong";
 @import "cmps/VolumeBar.scss";
-@import "cmps/MiniPreview.scss"
+@import "cmps/MiniPreview.scss";
+@import "cmps/StationEditModal.scss";
