--- a/src/assets/styles/views/SearchPage.scss
+++ b/src/assets/styles/views/SearchPage.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  padding: em(10px);
 
   .app-header {
     background-color: $sec-bg-clr;
