--- a/src/assets/styles/cmps/StationHeader.scss
+++ b/src/assets/styles/cmps/StationHeader.scss
@@ -1,5 +1,80 @@
+// Mobile layout
+.station-header {
+  padding: 1em;
+
+  .station-header-grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+
+    .station-header-img {
+      position: relative;
+      width: 120px;
+      height: 120px;
+      box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.4);
+      border-radius: 5%;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+
+        svg {
+          width: 30px;
+          height: 30px;
+          fill: white;
+        }
+      }
+
+      &:hover .overlay {
+        opacity: 1;
+      }
+    }
+
+    .station-header-info {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5em;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+
+      .station-type {
+        font-size: 0.75em;
+        font-weight: normal;
+      }
+
+      .station-name {
+        font-size: 1.25em;
+      }
+
+      .station-creator {
+        font-size: 1em;
+      }
+    }
+  }
+}
+
 @include for-normal-layout {
-  // Additional styles for the normal layout if needed
   .station-header {
     .station-header-grid {
       display: grid;
@@ -14,6 +89,7 @@
       justify-content: space-between;
 
       .station-header-img {
+        position: relative;
         width: em(150px);
         height: em(150px);
         box-shadow: 0 0 100px 20px rgba(0, 0, 0, 0.4);
@@ -25,6 +101,32 @@
           height: 100%;
           object-fit: cover;
         }
+
+        .overlay {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.7);
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 1em;
+          opacity: 0;
+          transition: opacity 0.3s ease;
+
+          svg {
+            width: 50px;
+            height: 50px;
+            fill: white;
+          }
+        }
+
+        &:hover .overlay {
+          opacity: 1;
+        }
       }
 
       .station-header-info {
@@ -33,6 +135,7 @@
         gap: 1em;
         align-items: center;
         justify-content: center;
+
         .station-type {
           font-size: 0.5em;
           font-weight: normal;
