--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -44,6 +44,10 @@
     grid-template-columns: auto 1fr;
     grid-template-rows: 1fr auto;
 
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
     .app-footer {
       grid-row: 2;
       grid-column: 1 / -1;
@@ -64,6 +68,7 @@
     .main-container {
       grid-row: 1;
       grid-column: 2;
+      padding: em(15px);
     }
   }
 }
