--- a/src/assets/styles/cmps/Catalog.scss
+++ b/src/assets/styles/cmps/Catalog.scss
@@ -25,8 +25,9 @@
     .station-list {
         display: flex;
         justify-content: space-between;
+
         flex-wrap: wrap;
-        gap: em(20px);
+        gap: em(10px);
     }
 
     .station-preview {
@@ -34,14 +35,26 @@
         flex-direction: column;
         gap: em(10px);
         align-items: center;
-        max-width: em(200px);
-        max-height: em(200px);
 
-        img {
-            max-width: em(140px);
-            max-height: em(140px);
+        flex-grow: 1;
+        flex-shrink: 1;
+        flex-basis: 25%;
+
+        .img-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: em(150px);
+            height: em(150px);
+            overflow: hidden;
             border-radius: em(6px);
-            box-shadow: 0 8px 24px rgba(0, 0, 0, .5);
+
+            img {
+                box-shadow: 0 8px 24px rgba(0, 0, 0, .5);
+                min-width: 100%;
+                min-height: 100%;
+                object-fit: cover;
+            }
         }
 
     }
