--- a/src/assets/styles/cmps/Catalog.scss
+++ b/src/assets/styles/cmps/Catalog.scss
@@ -1,61 +1,69 @@
 .catalog {
+  display: flex;
+  flex-direction: column;
+  gap: em(10px);
 
+  .title-container {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: em(50px);
+  }
+
+  .show-all-link {
+    color: $sec-font-clr;
+    align-self: flex-end;
+    font-size: em(14px);
+  }
+
+  .list-container {
+    max-height: em(220px);
+    overflow: hidden;
+    container-type: inline-size; // for container query
+    @container (min-width: 1000px) {
+      .station-list {
+        grid-template-columns: repeat(5, minmax(em(150px), 1fr));
+      }
+    }
+  }
+
+  .station-list {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(em(150px), 1fr));
+
+    flex-wrap: wrap;
     gap: em(10px);
 
-    .title-container {
+    .station-preview {
+      display: flex;
+      flex-direction: column;
+      gap: em(10px);
+      align-items: center;
+      width: 100%;
+      height: 100%;
+
+      flex-grow: 1;
+      flex-shrink: 1;
+      flex-basis: 20%;
+
+      .img-container {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
-        height: em(50px);
-    }
+        width: 100%;
+        height: 100%;
 
-    .show-all-link {
-        color: $sec-font-clr;
-        align-self: flex-end;
-        font-size: em(14px);
-    }
-
-    .list-container {
-        max-height: em(220px);
+        aspect-ratio: 1 / 1;
         overflow: hidden;
-    }
+        border-radius: em(6px);
 
-    .station-list {
-        display: flex;
-        justify-content: space-between;
-
-        flex-wrap: wrap;
-        gap: em(10px);
-
-        .station-preview {
-            display: flex;
-            flex-direction: column;
-            gap: em(10px);
-            align-items: center;
-
-            flex-grow: 1;
-            flex-shrink: 1;
-            flex-basis: 20%;
-
-            .img-container {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: em(150px);
-                height: em(150px);
-                overflow: hidden;
-                border-radius: em(6px);
-
-                img {
-                    box-shadow: 0 8px 24px rgba(0, 0, 0, .5);
-                    min-width: 100%;
-                    min-height: 100%;
-                    object-fit: cover;
-                }
-            }
-
+        img {
+          box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
+          min-width: 100%;
+          min-height: 100%;
+          object-fit: cover;
         }
+      }
     }
+  }
 }
