--- a/src/assets/styles/cmps/SongList.scss
+++ b/src/assets/styles/cmps/SongList.scss
@@ -1,68 +1,57 @@
 .song-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  list-style-type: none;
+  padding: em(10px);
+  margin: 0;
+
+  .song-header,
   .song-container {
-    //table like row
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 50px 2fr 1fr 1fr 1fr;
     align-items: center;
-    padding: 10px;
-    border-radius: 10px;
-    //onhover effect
-    &:hover {
-      background-color: #242424;
-      .song-details {
-        .song-img {
-          .play-btn {
-            display: flex;
-          }
-        }
-      }
+    padding: 10px 0;
+
+    .song-order,
+    .song-date-added,
+    .song-duration {
+      text-align: center;
     }
 
-    .song-details {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: start;
-      .song-title {
-        font-size: 1.2em;
-        font-weight: bold;
-      }
-      .song-artist {
-        font-size: 1em;
-        font-weight: bold;
-      }
-      .song-img {
-        position: relative;
-        width: 50px;
-        height: 50px;
-        border-radius: 5px;
-        overflow: hidden;
-        img {
-          width: 100%;
-          height: 100%;
-          border-radius: 5px;
-        }
-        .play-btn {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: rgba(0, 0, 0, 0.5);
-          display: none;
-          justify-content: center;
-          align-items: center;
-          svg {
-            fill: white;
-            width: 20px;
-            height: 20px;
-          }
-        }
+    .song-title,
+    .song-album,
+    .song-date-added,
+    .song-duration {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .song-duration {
+      text-align: right; // Aligns the duration to the right
+      padding-right: 10px; // Adds some padding to the right
+
+      svg {
+        width: 20px; // Adjust icon size if necessary
+        height: 20px; // Adjust icon size if necessary
+        fill: #888;
       }
     }
+  }
+
+  .song-header {
+    color: #888;
+    font-size: 14px;
+    font-weight: bold;
+    border-bottom: 1px solid #888;
+
+    .song-duration {
+      //make sure the header svg is aligned to the right
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+
+  .song-container {
+    color: #fff;
+    font-size: 14px;
   }
 }
